# navi-misc

./: .Bpib  .cvsignore  AUTHORS  BUGS  ChangeLog  DEVINFO  ERRATA  Makefile  NEWS  README  README.md  SConstruct  Tweak.py  about.shtml  autogen.sh  box.cpp  box.h  buildsystem.diff  camera.cpp  checkout-build.sh  cia_server.tac  configure.ac  configure.in  de_jong_bifurcation.py  document.h  donut_radiosity.blend  globals.cpp  globals.h  ground.cpp  layout.xml  main_window.c  map.h  object.cpp  object.h  polar_graph.py  preferences.cpp  rtgraph.py  ruleset_compiler.py  setup.py  style.css  (+4 more)
data/: Makefile.am  channel-list.glade  connect-dialog.glade  dcc-window.glade  irc-network-editor.glade  pipeline-editor.glade  preferences-dialog.glade  setup-dialog.glade  xchat-gnome.glade
evo/calendar-weather/: ChangeLog  Makefile.am  calendar-weather.c  org-gnome-calendar-weather.eplug.in
evo/com-novell-calendar-http/: Makefile.am  e-calendar-http.c
evo/mail-notification/: Makefile.am  mail-notification.c  org-gnome-mail-notification.eplug.in
evo/weather/: CCFBOU  Locations.xml.in  Makefile.am  ccf-test.c  configure.in  e-cal-backend-weather-factory.c  e-cal-backend-weather-factory.h  e-cal-backend-weather.c  e-weather-source-accid.c  e-weather-source-accid.h  e-weather-source-ccf.c  e-weather-source-ccf.h  e-weather-source.c  e-weather-source.h
fyre/: BUGS  Fyre.pidb  Histogram.cs  Makefile.solution.Fyre  TODO  configure.ac
fyre/data/: Makefile.am  element-tooltip.glade  pipeline-editor.glade
fyre/doc/: type-system  uml.zargo  usecases
fyre/pipeline-editor/: Element.cs  ElementTooltip.cs  Main.cs  Makefile.pipeline-editor  Makefile.solution.pipeline-editor  PluginManager.cs  element-tooltip.glade  make.sh  pipeline-editor.cmbx  pipeline-editor.glade  pipeline-editor.pidb  pipeline-editor.prjx
fyre/src/: CanvasElement.cs  CommandManager.cs  Data.cs  Dialogs.cs  Document.cs  Element.cs  ElementFactory.cs  ElementList.cs  ElementListModel.cs  ElementTooltip.cs  ErrorDialog.cs  Layout.cs  Main.cs  Makefile.am  NavigationImage.cs  Pipeline.cs  PipelineDrawing.cs  PipelineEditor.cs  PluginManager.cs  SerializationManager.cs  fyre.in
fyre/web/: about.content  navigation.inc  news.content  style.css
gnome-python-docs/: Makefile.am  gnome-python-ref.xml  gnomevfs-classes.xml  gnomevfs-constants.xml  gnomevfs-context.xml  gnomevfs-directoryhandle.xml  gnomevfs-drive.xml  gnomevfs-fileinfo.xml  gnomevfs-functions.xml  gnomevfs-handle.xml
plugins/notification/: Makefile.am  menu.h  notification.c  notification.schemas.in  preferences-notification.glade  preferences-page-plugin-notification.c  preferences-page-plugin-notification.h
plugins/notify-osd/: Makefile.am  notify-osd.c
plugins/perl/: Makefile.am  generate_header
plugins/python/: Makefile.am  python.c
plugins/sound-notification/: Makefile.am  sound-notification.c
plugins/url_scraper/: Makefile.am  TODO  UrlScraper.py  urlscraper.c
sheepsweeper/: ChangeLog  Makefile.am  configure.ac
sheepsweeper/src/: Direction.h  Fadey.cpp  IsoMapData.cpp  IsoMapData.h  IsoMapObjectFactory.cpp  IsoMapObjectFactory.h  IsoMapTile.cpp  Makefile.am  MapData.cpp  MapData.h  MapLocation.cpp  MapLocation.h  MapObject.h  MapTile.cpp  MapView.cpp  Sheep.cpp  Sheep.h  main.cpp
src/: AnimatedVector.h  Camera.cpp  CanvasElement.cs  CanvasPrimitives.cs  ColorModulator.cpp  ColorModulator.h  CommandManager.cs  ConfigProvider.h  Configuration.cc  DetailSettings.cpp  DetailSettings.h  Document.cs  Element.cs  ElementList.cs  EmbeddedPGserver.cpp~  EmbeddedPGserver.h  Engine.cpp  Engine.cpp~  Engine.h  Engine.h~  JetCOW.h  JetCOWRegistry.h~  Layout.cs  Lightmap.cpp  Lightmap.h  Makefile.am  MathT.cpp  Matrix.h  Matrix.h~  MidpointDisplacement.h~  Mutex.h  NavigationImage.cs  Node.cc  Noise.cpp  ParticleSystem.cpp  ParticleSystem.h  PerlinDisplacement.cpp  PerlinDisplacement.h  PerlinNoise.cpp~  Pipeline.cs  (+57 more)
src/common/: Makefile.am  ctcp.c  plugin.c  servlist.c  textevents.in  xchat.c
src/fe-gnome/: Makefile.am  about.c  about.h  apps_xchat.schemas.in  channel-list.c  channel-list.h  connect-dialog.c  connect-dialog.h  conversation-panel.c  conversation-panel.h  dcc-window.c  dcc-window.h  fe-gnome.c  find-bar.c  find-bar.h  gui.c  gui.h  image-utils.c  image-utils.h  irc-network-editor.c  irc-network-editor.h  irc-network.c  main-window.c  main-window.h  migration.c  navigation-tree.c  navigation-tree.h  palette.c  palette.h  pixmaps.c  plugins.c  plugins.h  preferences-dialog.c  preferences-dialog.h  preferences-page-colors.c  preferences-page-colors.h  preferences-page-dcc.c  preferences-page-dcc.h  preferences-page-effects.c  preferences-page-effects.h  (+36 more)
trunk/compiz-blur/: Makefile.am  configure.ac
trunk/gnome-python-docs/: Makefile.am  gnome-python-ref.xml  gnomevfs-classes.xml  gnomevfs-constants.xml  gnomevfs-context.xml  gnomevfs-directoryhandle.xml  gnomevfs-drive.xml  gnomevfs-fileinfo.xml  gnomevfs-functions.xml  gnomevfs-handle.xml  gnomevfs-uri.xml  gnomevfs-volume.xml
trunk/xchat-gnome/: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  autogen.sh  buildsystem.diff  checkout-build.sh  common.diff  configure.ac  test.c  xchat-gnome.glade
xchat-gnome/: ChangeLog  MOVED  Makefile.am  NEWS  buildsystem.diff  common.diff  configure.ac  quit.diff  test.c  xchat-gnome.glade  xtext.diff
xchat-gnome/data/: Makefile.am  channel-list.glade  connect-dialog.glade  dcc-accept.glade  irc-network-editor.glade  preferences-dialog.glade  setup-dialog.glade  topic-change.glade  xchat-gnome-ui.xml  xchat-gnome.1  xchat-gnome.glade
xchat-gnome/fe-gnome/: BUGS  ChangeLog  Makefile.am  ROADMAP  TODO  about.c  about.h  apps_xchat.schemas  apps_xchat.schemas.in  apps_xchat.schemas.in.in  change-topic.glade  channel-list.c  channel-list.glade  channel_list.c  channel_list.h  completion-store.c  connect-dialog.c  connect_dialog.c  connect_dialog.h  dcc-window.c  dcc-window.glade  dcc-window.h  error_dialog.c  fe-gnome.c  gui.c  gui.h  guir.c  irc-network-editor.c  irc-network-editor.glade  irc-network-editor.h  irc-network.c  irc-network.h  (+67 more)
(+7934 files in other folders)
