REFERENCE_MAIN_FILE = gnome-python-ref.xml
REFERENCE_DOC_NAME = gnome-python
DOC_MODULE = gnome-python

REFERENCE_XML_FILES =			\
	gnome-python-ref.xm		\
	gnomevfs-classes.xm		\
	gnomevfs-constants.xm		\
	gnomevfs-context.xml		\
	gnomevfs-directoryhandle.xml

include $(top_srcdir)/docs/pygtk-ref-docs.make

EXTRA_DIST = common.xsl devhelp.xsl html.xsl pdf-style.xsl pdf.xsl \
             pygtk-ref-docs.make ref-html-style.xsl tut-html-style.xsl
